<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
    android:layoutDirection="ltr">


    <include
        android:id="@+id/loading"
        layout="@layout/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/MyThemeOverlay_Toolbar"
                app:title="@string/new_invoice"
                app:titleCentered="true"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/approve"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="-25dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="65dp"
                    android:elevation="10dp"
                    android:text="@string/approve"
                    android:textColor="#000000"
                    app:backgroundTint="@color/primaryColor"
                    app:cornerRadius="20dp"
                    app:elevation="10dp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="100dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:gravity="center|right"
                            android:hint="@string/product_name"
                            app:errorEnabled="true"
                            app:hintTextColor="@color/hint_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/product_name"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@color/transparent"
                                android:gravity="center|right"
                                android:inputType="text"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:gravity="center|right"
                            android:hint="@string/number"
                            app:errorEnabled="true"
                            app:hintTextColor="@color/hint_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/number"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@color/transparent"
                                android:clickable="true"
                                android:inputType="number"
                                android:maxLength="5"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:gravity="right"
                            android:hint="@string/unit_price"
                            app:errorEnabled="true"
                            app:hintTextColor="@color/hint_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/unit_price"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@color/transparent"
                                android:inputType="number"
                                android:maxLength="15"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:gravity="center|right"
                            android:hint="@string/total_price"
                            app:errorEnabled="true"
                            app:hintTextColor="@color/hint_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/total_price"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@color/transparent"
                                android:focusable="false"
                                android:inputType="number"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginBottom="35dp"
                            android:gravity="center|right"
                            android:hint="@string/date"
                            app:errorEnabled="true"
                            app:hintTextColor="@color/hint_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/date"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@color/transparent"
                                android:focusable="false"
                                android:inputType="text"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>