<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bkg2"
        android:elevation="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="32dp"
        android:elevation="9dp"
        android:text="@string/welcome1"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="32dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="30dp"
                        android:gravity="center"
                        android:hint="@string/phone_number"
                        android:textColorHint="@color/hint_color"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxStrokeColor="@color/primaryColor"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/hint_color"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="phone"
                            android:textColorHint="#546E7A"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enter"
                style="@style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-25dp"
                android:layout_marginEnd="50dp"
                android:text="@string/enter"
                android:textColor="#000000"
                app:backgroundTint="@color/primaryDarkColor"
                app:cornerRadius="20dp"
                app:elevation="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view"
                app:strokeColor="@color/primaryDarkColor"
                app:strokeWidth="1dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>