<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layoutDirection="ltr">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bkg2"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="30dp"
        android:elevation="9dp"
        android:gravity="center|top"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:elevation="2dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="32dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/lnr1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginRight="25dp"
                        android:gravity="center"
                        android:hint="@string/phone_number"
                        android:textColorHint="@color/hint_color"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxStrokeColor="@color/primaryColor"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/hint_color"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="phone"
                            android:textColorHint="#546E7A"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/approve1"
                        style="@style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/approve"
                        android:textColor="#000000"
                        app:backgroundTint="@color/primaryDarkColor"
                        app:cornerRadius="20dp"
                        app:strokeColor="@color/primaryDarkColor"
                        app:strokeWidth="1dp"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="32dp"
                android:visibility="gone"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/lnr2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:hint="@string/validation_code"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/hint_color"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/validationCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="number"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/approve2"
                        style="@style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/approve"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/primaryDarkColor"
                        app:cornerRadius="20dp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/remaining_time"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/timer"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:textColor="@color/black" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resend"
                        style="@style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="180dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/resend"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/primaryDarkColor"
                        app:cornerRadius="20dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>